--- a/mod2_solution/public/index.html
+++ b/mod2_solution/public/index.html
@@ -11,6 +11,9 @@
     <div class="col-l-3 col-m-2 col-s-1">
         <div class="col-content">
             <div class="inner-content">
+                <div class="section-title" id="alpha">
+                    <p>Alpha</p>
+                </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus pulvinar elementum integer enim neque. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Et tortor consequat id porta nibh venenatis cras sed. Aliquet nibh praesent tristique magna sit amet purus gravida quis. Volutpat commodo sed egestas egestas fringilla. Sollicitudin tempor id eu nisl nunc mi. Ipsum faucibus vitae aliquet nec ullamcorper. Auctor neque vitae tempus quam pellentesque nec nam aliquam sem. Interdum velit laoreet id donec ultrices. Dapibus ultrices in iaculis nunc sed augue lacus viverra vitae.</p>
             </div>
         </div>
@@ -18,6 +21,9 @@
     <div class="col-l-3 col-m-2 col-s-1">
         <div class="col-content">
             <div class="inner-content">
+                <div class="section-title" id="bravo">
+                    <p>Bravo</p>
+                </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus pulvinar elementum integer enim neque. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Et tortor consequat id porta nibh venenatis cras sed. Aliquet nibh praesent tristique magna sit amet purus gravida quis. Volutpat commodo sed egestas egestas fringilla. Sollicitudin tempor id eu nisl nunc mi. Ipsum faucibus vitae aliquet nec ullamcorper. Auctor neque vitae tempus quam pellentesque nec nam aliquam sem. Interdum velit laoreet id donec ultrices. Dapibus ultrices in iaculis nunc sed augue lacus viverra vitae.</p>
             </div>
         </div>
@@ -25,6 +31,9 @@
     <div class="col-l-3 col-m-1 col-s-1">
         <div class="col-content">
             <div class="inner-content">
+                <div class="section-title" id="charlie">
+                    <p>Charlie</p>
+                </div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus pulvinar elementum integer enim neque. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Et tortor consequat id porta nibh venenatis cras sed. Aliquet nibh praesent tristique magna sit amet purus gravida quis. Volutpat commodo sed egestas egestas fringilla. Sollicitudin tempor id eu nisl nunc mi. Ipsum faucibus vitae aliquet nec ullamcorper. Auctor neque vitae tempus quam pellentesque nec nam aliquam sem. Interdum velit laoreet id donec ultrices. Dapibus ultrices in iaculis nunc sed augue lacus viverra vitae.</p>
             </div>
         </div>
