--- a/mod3_solution/index.html
+++ b/mod3_solution/index.html
@@ -1,10 +1,88 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Food, LLC</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 </head>
 <body>
+<header>
+  <nav id="header-nav" class="navbar navbar-default">
+    <div class="container">
+      <div class="navbar-header">
+        <div class="navbar-brand">
+          <h1>Food, LLC</h1>
+        </div>
 
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+
+      <div id="collapsable-nav" class="collapse navbar-collapse">
+        <ul id="nav-list" class="nav navbar-nav navbar-right">
+          <li class="visible-xs">
+            <a href="#chicken"> Chicken</a>
+          </li>
+          <li class="visible-xs">
+            <a href="#beef"> Beef</a>
+          </li>
+          <li class="visible-xs">
+            <a href="#sushi"> Sushi</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+
+
+<div class="container">
+  <h1 class="text-center">Our Menu</h1>
+  <div id="chicken" class="col-xs-12">
+    <h2 class="text-center"> Chicken</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut sem nulla pharetra diam sit amet nisl. Leo vel orci porta non pulvinar. At ultrices mi tempus imperdiet. Consectetur adipiscing elit duis tristique. Eleifend donec pretium vulputate sapien nec. Enim eu turpis egestas pretium aenean pharetra magna ac. Gravida rutrum quisque non tellus orci ac. Ut tellus elementum sagittis vitae. Diam maecenas ultricies mi eget mauris. Proin libero nunc consequat interdum varius sit amet mattis vulputate. Pellentesque elit eget gravida cum sociis natoque. Et ultrices neque ornare aenean euismod elementum nisi quis. Vivamus arcu felis bibendum ut tristique et egestas quis ipsum.
+
+      Malesuada nunc vel risus commodo viverra maecenas. Consectetur adipiscing elit pellentesque habitant morbi tristique senectus et netus. Platea dictumst vestibulum rhoncus est pellentesque elit. Dictum fusce ut placerat orci nulla pellentesque dignissim enim sit. Quis hendrerit dolor magna eget est. Dictum sit amet justo donec enim diam vulputate. Elementum sagittis vitae et leo duis ut diam quam. Cursus risus at ultrices mi tempus imperdiet nulla malesuada. Placerat in egestas erat imperdiet. Ut faucibus pulvinar elementum integer enim neque volutpat. Ullamcorper a lacus vestibulum sed arcu non. Eget egestas purus viverra accumsan in nisl nisi scelerisque eu. Venenatis a condimentum vitae sapien pellentesque. Ipsum dolor sit amet consectetur adipiscing elit duis. Nulla malesuada pellentesque elit eget gravida cum. Interdum velit laoreet id donec ultrices tincidunt. Condimentum id venenatis a condimentum. Diam phasellus vestibulum lorem sed risus ultricies tristique nulla aliquet.
+
+      Eget arcu dictum varius duis at consectetur lorem donec. Porttitor leo a diam sollicitudin tempor id eu nisl nunc. Urna molestie at elementum eu facilisis sed odio morbi. Maecenas volutpat blandit aliquam etiam erat velit scelerisque in dictum. Diam ut venenatis tellus in metus. Et egestas quis ipsum suspendisse ultrices gravida. Amet nulla facilisi morbi tempus iaculis urna id. Nulla aliquet enim tortor at auctor. Amet porttitor eget dolor morbi non arcu. Diam quam nulla porttitor massa id. Dis parturient montes nascetur ridiculus mus mauris vitae ultricies leo. Sit amet nisl suscipit adipiscing bibendum. Est ullamcorper eget nulla facilisi etiam dignissim diam. Turpis in eu mi bibendum neque egestas congue. Ut morbi tincidunt augue interdum velit euismod in pellentesque massa. Viverra maecenas accumsan lacus vel facilisis volutpat est. Enim blandit volutpat maecenas volutpat blandit aliquam etiam erat. Proin nibh nisl condimentum id venenatis a.
+
+      Lorem mollis aliquam ut porttitor leo a diam. Leo in vitae turpis massa sed elementum tempus egestas. Quam vulputate dignissim suspendisse in est ante in nibh. Ornare suspendisse sed nisi lacus sed. Sodales ut eu sem integer vitae justo eget magna. Eros donec ac odio tempor orci dapibus. Elit duis tristique sollicitudin nibh sit amet commodo nulla facilisi. Praesent elementum facilisis leo vel fringilla est ullamcorper eget. Mollis nunc sed id semper risus in hendrerit. Pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Scelerisque purus semper eget duis at tellus at urna condimentum. Interdum velit laoreet id donec ultrices tincidunt arcu non. Nibh sed pulvinar proin gravida hendrerit lectus. Ultricies integer quis auctor elit sed vulputate mi sit amet. Est placerat in egestas erat imperdiet sed euismod nisi porta. Nunc aliquet bibendum enim facilisis gravida neque convallis a.
+
+      Consectetur adipiscing elit ut aliquam purus sit amet luctus venenatis. Turpis egestas integer eget aliquet. Arcu non odio euismod lacinia. Platea dictumst quisque sagittis purus sit. Arcu odio ut sem nulla pharetra diam sit amet nisl. Volutpat sed cras ornare arcu dui. Vitae ultricies leo integer malesuada nunc vel risus. Sit amet mattis vulputate enim. Sit amet dictum sit amet justo donec enim diam vulputate. Turpis egestas integer eget aliquet nibh praesent. Lectus urna duis convallis convallis tellus id interdum. Ac feugiat sed lectus vestibulum mattis ullamcorper velit.
+
+      Nunc lobortis mattis aliquam faucibus purus in. Neque volutpat ac tincidunt vitae semper quis. Risus nullam eget felis eget nunc lobortis mattis aliquam. Metus vulputate eu scelerisque felis imperdiet proin fermentum leo vel. In dictum non consectetur a. Eget felis eget nunc lobortis. Justo laoreet sit amet cursus sit amet. Eget nullam non nisi est sit amet facilisis magna etiam. Ornare lectus sit amet est. Massa massa ultricies mi quis hendrerit dolor magna eget est. Sit amet consectetur adipiscing elit duis tristique sollicitudin nibh sit. Nunc faucibus a pellentesque sit.
+
+      Vitae suscipit tellus mauris a diam. Mattis molestie a iaculis at erat pellentesque adipiscing. Pellentesque dignissim enim sit amet venenatis urna cursus eget. Aliquam malesuada bibendum arcu vitae elementum curabitur vitae nunc. Commodo viverra maecenas accumsan lacus vel facilisis volutpat est velit. Pulvinar elementum integer enim neque. Bibendum enim facilisis gravida neque convallis a. Vitae proin sagittis nisl rhoncus mattis. Mus mauris vitae ultricies leo integer malesuada. Sapien et ligula ullamcorper malesuada. Pretium fusce id velit ut tortor pretium viverra suspendisse. Odio ut enim blandit volutpat maecenas volutpat. Erat velit scelerisque in dictum non consectetur.
+
+      Nam libero justo laoreet sit amet. Id eu nisl nunc mi ipsum. Ipsum nunc aliquet bibendum enim facilisis gravida. Dictumst quisque sagittis purus sit amet volutpat consequat mauris. Sollicitudin nibh sit amet commodo nulla. Suscipit adipiscing bibendum est ultricies integer. Est ante in nibh mauris cursus mattis molestie. Quis risus sed vulputate odio ut enim. Diam maecenas sed enim ut sem viverra aliquet eget. Massa vitae tortor condimentum lacinia quis vel eros donec ac.</p>
+  </div>
+</div>
+
+<div class="container">
+  <div id="beef" class="col-xs-12">
+    <h2 class="text-center">Beef</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus pulvinar elementum integer enim neque. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Et tortor consequat id porta nibh venenatis cras sed. Aliquet nibh praesent tristique magna sit amet purus gravida quis. Volutpat commodo sed egestas egestas fringilla. Sollicitudin tempor id eu nisl nunc mi. Ipsum faucibus vitae aliquet nec ullamcorper. Auctor neque vitae tempus quam pellentesque nec nam aliquam sem. Interdum velit laoreet id donec ultrices. Dapibus ultrices in iaculis nunc sed augue lacus viverra vitae.</p>
+  </div>
+</div>
+
+<div class="container">
+  <div id="sushi" class="col-xs-12">
+    <h2 class="text-center">Sushi</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Faucibus pulvinar elementum integer enim neque. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Et tortor consequat id porta nibh venenatis cras sed. Aliquet nibh praesent tristique magna sit amet purus gravida quis. Volutpat commodo sed egestas egestas fringilla. Sollicitudin tempor id eu nisl nunc mi. Ipsum faucibus vitae aliquet nec ullamcorper. Auctor neque vitae tempus quam pellentesque nec nam aliquam sem. Interdum velit laoreet id donec ultrices. Dapibus ultrices in iaculis nunc sed augue lacus viverra vitae.</p>
+  </div>
+</div>
+
+<!-- jQuery (Bootstrap JS plugins depend on it) -->
+<script src="js/jquery-1.11.3.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
